Added Gateway changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
 server.port=8081
-spring.application.name=productservice
-#spring.cloud.config.uri=
-spring.management.security.enabled=false
+spring.application.name=product-service
+#spring.cloud.config.uri=http://localhost:8888
+spring.config.import=configserver:http://localhost:8888
 management.endpoints.web.exposure.include=*
+#eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
