--- a/product-service.properties
+++ b/product-service.properties
@@ -3,8 +3,8 @@ spring.datasource.username=admin
 spring.datasource.password=springsecurity
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format=true
-spring.jpa.hibernate.ddl-auto = create
-#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
